# multiplayer-maze-wars

./: Cargo.toml  README.md
client/: Cargo.toml  start_server.sh
client/src/: game.rs  main.rs  map.rs  player.rs  view.rs
client/src/views/: create_game.rs  join_game.rs  mod.rs
maps/: 1.txt  2.txt  asfasf.txt  empty.txt  lol.txt  p.txt  test.txt  war.txt
server/: Cargo.toml
server/src/: main.rs
src/: client.rs  create_game.rs  create_map.rs  drawer.rs  game.rs  join_game.rs  main.rs  main_menu.rs  map.rs  player.rs  server.rs  starting_screen.rs  state.rs  view.rs
src/views/: create_game.rs  game.rs  join_game.rs  main_menu.rs
