[package]
name = "multiplayer-fps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.9.0-rc0"
local-ip-address = "0.5.1"
throttle = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"